[gd_scene load_steps=10 format=3 uid="uid://bxidw3w78yytg"]

[ext_resource type="Texture2D" uid="uid://c35xwai7drflq" path="res://Assets/Traps/Fan/Off.png" id="1_nfiji"]
[ext_resource type="Texture2D" uid="uid://dpp1emfkg3keg" path="res://Assets/Traps/Fan/On (24x8).png" id="2_j6bxr"]
[ext_resource type="Script" uid="uid://db7v85y4slah0" path="res://Scripts/fan.gd" id="3_j6bxr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ltwq2"]
atlas = ExtResource("1_nfiji")
region = Rect2(0, 0, 24, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_33x2l"]
atlas = ExtResource("2_j6bxr")
region = Rect2(0, 0, 24, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur6kp"]
atlas = ExtResource("2_j6bxr")
region = Rect2(24, 0, 24, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbrcj"]
atlas = ExtResource("2_j6bxr")
region = Rect2(48, 0, 24, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_fovw7"]
atlas = ExtResource("2_j6bxr")
region = Rect2(72, 0, 24, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_33x2l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltwq2")
}],
"loop": false,
"name": &"off",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_33x2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur6kp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbrcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fovw7")
}],
"loop": true,
"name": &"on",
"speed": 20.0
}]

[node name="Fan" type="AnimatedSprite2D"]
z_index = 5
sprite_frames = SubResource("SpriteFrames_33x2l")
animation = &"off"
autoplay = "off"
script = ExtResource("3_j6bxr")

[node name="Particles" type="CPUParticles2D" parent="."]
z_index = 1
position = Vector2(0, -5)
emitting = false
amount = 15
emission_shape = 3
emission_rect_extents = Vector2(10, 0)
direction = Vector2(0, 1)
gravity = Vector2(0, -980)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-10, -3, 11, -3, 11, -1, 3, -1, 3, 4, -2, 4, -2, -1, -10, -1)

[node name="ActiveTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="PlayerCast1" type="RayCast2D" parent="."]
position = Vector2(0, -3)
target_position = Vector2(0, -204)
collision_mask = 2

[node name="PlayerCast2" type="RayCast2D" parent="."]
position = Vector2(-7, -3)
target_position = Vector2(0, -204)
collision_mask = 2

[node name="PlayerCast3" type="RayCast2D" parent="."]
position = Vector2(7, -3)
target_position = Vector2(0, -204)
collision_mask = 2

[connection signal="timeout" from="ActiveTimer" to="." method="_on_active_timer_timeout"]
